# ChangeLog for media-libs/freetype
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.412 2015/01/08 00:15:32 polynomial-c Exp $

*freetype-2.5.5 (08 Jan 2015)

  08 Jan 2015; Lars Wendler <polynomial-c@gentoo.org> +freetype-2.5.5.ebuild:
  Version bump.

*freetype-2.5.4-r1 (14 Dec 2014)

  14 Dec 2014; Mike Gilbert <floppym@gentoo.org>
  +files/2.5.4-0001-pcf-Fix-Savannah-bug-43774.patch,
  +files/2.5.4-0002-src-pcf-pcfread.c-pcf_read_TOC-Improve-fix-from-2014.patch,
  +freetype-2.5.4-r1.ebuild, -freetype-2.5.4.ebuild:
  Backport fixes for bug 532506.

  14 Dec 2014; Mike Gilbert <floppym@gentoo.org> freetype-2.5.4.ebuild:
  Switch back to ${S} after sedding the ftdemos Makefile so that epatch_user
  works properly. If the user wants to patch ftdemos, they are SOL for now.

  13 Dec 2014; Ben de Groot <yngwin@gentoo.org> freetype-2.5.4.ebuild:
  Prevent circular dependencies

*freetype-2.5.4 (13 Dec 2014)

  13 Dec 2014; Ben de Groot <yngwin@gentoo.org> +freetype-2.5.4.ebuild,
  -files/freetype-2.4.11-auto-hinter_compile_fix.patch,
  -files/freetype-2.4.11-locale.patch,
  -files/freetype-2.4.12-clean-include.patch,
  -files/freetype-2.4.12-set-adobe-cff-hinting-as-default.patch,
  -files/freetype-2.4.9-type1-incremental.patch,
  -files/freetype-2.5.1-TT_Load_Simple_Glyph_fix.patch,
  -files/ft2demos-2.5.1-compilefix.patch:
  Version bump, with adjusted patchset from bohoomil/fontconfig-ultimate

  13 Oct 2014; Michał Górny <mgorny@gentoo.org> freetype-2.5.3-r1.ebuild:
  Bump harfbuzz dep to match configure check, pointed out in bug #517442.

  09 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> -freetype-2.4.11.ebuild,
  -freetype-2.5.0.1.ebuild, -freetype-2.5.3.ebuild:
  Drop insecure versions wrt bug #504088

  02 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> freetype-2.5.3-r1.ebuild:
  ppc64 stable wrt bug #504088
