@@ -18,24 +18,24 @@ DIST ft2demos-2.5.3.tar.bz2 186773 SHA256 e6c9d0b344b88ff5ab25f20640cf78e2ec56bb
 DIST ft2demos-2.5.4.tar.bz2 187225 SHA256 54621937130926235abe05ba08aeb390a983998d2d1173c5fdc9ccb5bda4d96a SHA512 8fc0dd33ce7debc40b2ca696d965df7a72797042c7963aa19a41bc82c20fbc1c1a953535c58ff804a15dddb6f4f58a5d7038abd3949c37a787288720c7712345 WHIRLPOOL 270d8ef5b8d25c7e7c6b77f303eedd85c459b23ac699961637430869f7a3d6d21ee3ce97a34aee6633b25118b1048d7fe65283a26400f2c93eda829f08202602
 DIST ft2demos-2.5.5.tar.bz2 182006 SHA256 b87c7deb5d9b1fddb8520c091a5491cc63ecac4de25139e1da38aebee82195ea SHA512 c6e1855f2315665e39a894ecfcb65f8546de435c1dada0ea0a6665a1e3ef22331d6949cd9261dfb6b68e653631d4c2e74f8ea31b53b40e46f44ab4dae38e368b WHIRLPOOL 55d6add5e3fac008a39231e3805e151a5a9b7cafb6ef970e546d96d3fa338a6a4a744aeb59ea04804312164aedd5e5a21e19773dbf5c42a1acfc42d283d90930
 EBUILD freetype-2.5.3-r1.ebuild 5324 SHA256 9238160476f32980772b6cf54004b8aa20f2f226e51faf959c04adf65223d33a SHA512 ac9d9e3048e78e59a45705b933d255fbdb52ec33bfc8e7ccc24bb6e8ec63871f50c4ecb93fe5c1dda6179375a1c0f34e2bfb3ae1fd2c97bcbd33e641aa11062e WHIRLPOOL 5e0a523f2f0e4c86db6846b9c99a24e6d250ce05f699101a2e4e6a2647b5c562e0822350f01870469f19d32e7d4122a3a9326a3fb26f57195cd711d4a3f000e3
-EBUILD freetype-2.5.4-r1.ebuild 5563 SHA256 c87a0b1f72f487e921f927f1fbabe16f87a7f11beb046bb83653835170547d6b SHA512 1a93b8873b5abd55cb48907c8ba667cabc592399c45d6a6939329cc4e76e7f3e593000ce76114b2734d1f7d5fd328b8a9c2281c822f1a6e33c908c30c9fd86f2 WHIRLPOOL d69dd9ba0d6af58f35fab6ca3f827d1e86b24747dcf6e9c445a5153629db22bf303d68c94ef57e970f89801e6ed064102665d0a3a98aa39f421dee21455cc34b
+EBUILD freetype-2.5.4-r1.ebuild 5557 SHA256 0c753953ce2304f5d56eb15f5ef41ff27f361f8185c34cbfc03fac0436f8d936 SHA512 f812336498cdfe7cf7495b41ab35d0c397951e20ec4297eb11427c46d24c6de1753d248ff6fb25b511a6c43d74ff449e3d011e01f7a0b62a7d2c13af32290589 WHIRLPOOL 17f607bd5e84c3e61c8cf6fe75ff2c967df8ed08bdb579db6acc3a6b2c8ed489c84eabe688e50cae0f458863b6aeb4299a6032d5eb78257d4b4067d901972fcb
 EBUILD freetype-2.5.5.ebuild 5547 SHA256 94e1631900db6bab8b916306fa821dc2141d20f7ed496541b3c44a1a927b6c90 SHA512 9941394c24baa4573ddc4a7727e64d6bf7a8fb3458869f37c7d60a09af800966a31d5852fe62184336b960114ca8f30179565e806691a96ab282b1298343d150 WHIRLPOOL 1456283922408988ef069873d0110b8bf052efd47b60ffd31925711dabdb1c09edae6afe5d78b24fa1097c0cb84a84606dc3ff289251ad942b455a5aec1e813b
-MISC ChangeLog 62830 SHA256 e7763246041f4f19d0b881ee612bd3543237a45308a5b55a22c80bb05eb17a87 SHA512 6798e8b06fdbd78b59c0406f1869facbbd81d3429891b1a2f58a7a9fea9aa25b35d77d4b2b7cf568d7ef7c8ebf1ef90294517c538c3f38d4619f4d82ce859e23 WHIRLPOOL 1c53f11415103eaea8c514e9479709da3ef245f1b6fdbb6a861972a21623cba2548390255a965144272239df18919fc99d44e810cc8b3a5153d80804f6c6adac
+MISC ChangeLog 63043 SHA256 0003a08a06e353cd4c0403c50f99d43523608e8e19c01231802bf23bce063c3b SHA512 8836b42707602d362cf74429c77c6d0dd3d2a0e19b3bd5193769c00acca945aeaba62587c9a882501ca233e3006187ad19f56b6a9f51a101ddce6a24a51c0531 WHIRLPOOL bda693e1257c35312f1f0326efe870e72a28c86882edab6dde42730e33592a4022e4151528ec4ff735ba01c7d21c210f9e73c7d38221de65a955d58c34721552
 MISC metadata.xml 1400 SHA256 65a92662484be603be8adae907f727219ca78e4cb042350d2741c2fa03fde8a7 SHA512 e3052be471b660ff82261b8cf055a2ae20421d51c0ecdbc31a777aabab3708578012682e01b8b7d200cdd53bf980b4515de68196aac5711a2fd4a8799c1051a9 WHIRLPOOL 3bb9331dde6579280d3b673b62d6086f142a23210f40ab2c3a0cedfed39b067c5d2bf5eed3055f03071e650822723ce919d6a938ada5276c38d05265d71dc828
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUrcwmAAoJEPiazRVxLXTFCPQP+wZFB5pBZSKsdP3Cv/C5l1Wd
-c1UEZBQdGvkEqBaYma3Xhvm4b657/eNQEw/eXxgf4Q2Ff2ktZUyBnqjBC4LzTxHz
-HUxAxYihPeu3G5IOGNVziIVrEL0qdKUmF3A+AXce+t06jXPecQ4y0x2T+mYVDClg
-M0dkRHhnSm+yXCQvpdghZG/nsqcm5kMxcjI7Dg9QNs6Pa2v22XbHtVoyeKaKeOOf
-p7eTSq0jvHujn91OKilk0rCugtDup3k9JOlpUemPmHwJYSY3gvmEPSk7cc+ncBFK
-0VX711Vv4ILLhJaPt+b3BUsPI+YsnK0qfYnxDSKX75vatlr4OSwb0KXjlmEUS3gO
-q1I681w0aZzn74UZ79CcrGvY+tucs8cxYxH76KTqRB/4mHgYy0uJzgwLn6zKici9
-W731Y83n8Zxv8VCHUMUBKCdviJ2GEYnYqLEe6suhTGBdM6ibHVpjIp5nbPABYI9x
-BnGoUFzyJWJGdSLV1smiSBTlesqQjLKol6qZI4F34THQty3LWq6pBLvWrUI3xtP0
-wHBMSnkvMNvl128g4XOd8JHe21mHRgosKq+dZSCj8oNtiGxf/xxQDiBQpZdGgDFz
-DwR9311IolodmFtzAd/FjjDLQOQeS6tAzyP3j6ylTO88TqifhiQL7hfG6QOXlFvO
-/Xtgu90uBZSYA0KputsX
-=YxzX
+iQIcBAEBCAAGBQJU3dNSAAoJELp701BxlEWfP14QAMJa6n3BV4lcWANahc42jxaZ
+jJUafJNJbCBKlJ7tK3ldckxqehc2P+YW9kwLr9Kjobgec9z3bDP1MWev/5qG107A
+UapGtcpdd0eTzCO2tGttkhPHhZakdRJd2tvJaNhtkND18d0Sl0/TFZBkohh1Mp5B
+2PWtrO1ahWeqPl1rn6VMj+9D6BsavYaFV1XN0NIq0BGYavTI1P9mAH+c6v3MPtFe
+HENiBJdpmLetR2rOjRz2YulYZXN23FWhwKFf+lEpUzAPcQ7USRGEF6BMBEtAwih/
+G7Iy6sWC1yCV1d/lr1jWW2Kjpv7eevGourAv4ShjNa1a9mGb9pLiR5Wy50HPeRCz
+jdmtdQu4Dnwp4R+XEL6vF0mq0UZNalQ6kS7j78RyfUwVc/LJbP6nu1V+jZnBPjZp
+XbRT2IduvSscK2sNN6UOFapM77acGvslcK1+LMGY2TtQHQuRURaPSBIDWELqj7JV
+LLj5S0sKMYqkTtpUW9m1pmwJVHLKLFd9rx+3eH65oeDUffuewscOS5+LeBiT7ecn
+6eo82Cjz8ICeGLzXtahM06111bpk3ytxekJopPbvD8YyX4yNeLg+bd0tFjaYXYdC
+lnFgWA3Stg3UxlRlZA5rN3G9Mkhsa3d2kLnO5XZ2r+N8d1sfOqF0Lv67FIo9IAGj
+4ALpZ47dbWFCMNKZ6G3q
+=B7ru
 -----END PGP SIGNATURE-----
