@@ -8,13 +8,23 @@ DIST dbus-1.8.12.tar.gz 1864609 SHA256 c91428f28d2925ba32d34ffc824bfcf4d40d5e1e6
 DIST dbus-1.8.16.tar.gz 1866436 SHA256 7f795268efd343ff0498786acb35097564390d40b1b6158daf1b4f742b522b07 SHA512 79e0fb21912fe5644e1babf96fc2a64595edef6524ef50d54f6beb8cd0f1224b8484a52a7815494b40bd00bf048176002ab35443c0bb6bd04abdc3c60599f1d5 WHIRLPOOL 5e992caf51c0fb24885099b957ce01205a249118c5db27c5161e6d45ae85a889d7f26d32dfa03a207025e87e233f74c6cffd09a5ccc44d4e598d3d535b8d4247
 EBUILD dbus-1.8.10.ebuild 7186 SHA256 993f3c088c84fa4f74056fcc3fd5053b40ca5d093664dc41430a9358fade6ac8 SHA512 ca7d89c1bbcc7488a239fe4598a301315b800f7b6a0e2942d43f621bfe9774944850f93f0f074ed14f22c8d001a0f97d7f6fa6787a1ec873f1771dbd290122d4 WHIRLPOOL d422610ef684dfc7b8835499a30910fb10816c18e7fa140de1481c27eb34f02aa8af80775fd7f9cf6fb30f451d4bc8938835ebcf120421c7a5265661866cb440
 EBUILD dbus-1.8.12.ebuild 7199 SHA256 060af66a2c2093d01f8e123c9b322e199ec11315b58173071ce2ed5059f47b2a SHA512 b6e8a0bb3ebac676dc08a63b9678e277c204ba0a58682e57a4e0a119f9f389db877d6f77545c82553205f91f28f564218e6012a4452e008ed5091be964c37707 WHIRLPOOL 198d1a75374364cd2465e849ed875fda03523372aea2c41f4206e3ebc8ff3a5f0b3b115c943ba794dc28dd129f9b965644d95d74358feb7f808abe5772464f0d
-EBUILD dbus-1.8.16.ebuild 7193 SHA256 12293e2544a1dfb41447af93ee3fd4ef3dff1325aec9c5c774f56f4b8dbe6d64 SHA512 7d6557c95ca9d044001f0fdf43ed1a03236c3f62c41bb45c7c831926989c607efa299c6e5a1abf12a53c6ef07bd1be52e6c43de60c0860f5c8f44f611c695813 WHIRLPOOL 6308a221130b86d1785064c213cf52c1214b19188b36c18d290de6084cabccd51aabc36eb1956c276429f86750c2e4a063d096253ebc94e3ad97eb01871525ad
-MISC ChangeLog 66271 SHA256 b30bc7a105ea25df0aa4c8d9705bd0c606d5922cea5f44cbe2e37bd8ddcd1951 SHA512 c49c3f8325616fce842bc014152d0229c32a178a6cb1e2cbeaaea0bc63b3e28e9907ccbb0e58fb07cda2304d39c2303e671c2646dcb7176f46962ba9f3149107 WHIRLPOOL 54d253358062f24f06746f3fa632e1053714e0494ce834a7671bcd3e4ed26909e9223a1d8f70255167aa39a42cd00614d1add45f447408be543dd0587d8f6d53
+EBUILD dbus-1.8.16.ebuild 7191 SHA256 5e02171d508cef7d2124a590f5a3ef42dc22c0c688c25706e8f22b5b051a80a9 SHA512 9160bf396e1ceb0c5af72985237f278af501c475637477aaea2481d3ec194646295773243031778cf019e84362e3462c51cb1b5b6679f905f54f691d87af15d7 WHIRLPOOL bd454a1c863047da0213bd81dcee033fb1757165e2582ee4046f0810ab4f297d9633229fd9deec0127fb8a85e1f4bdc15e124eb5894f13ca67bfff6cfabbc3ff
+MISC ChangeLog 66481 SHA256 aa9accf468a1a7bb554e9aac67f22b641afcf6e7042e3dfb4c35612ff71c211b SHA512 b3939b36754f2a96509f3d239b97ab9b73c3923600e369e239145215a7331cc4a956c2566a1e5b56d44597ce45bdcc74a4bd014305daa4a799678103933403ea WHIRLPOOL e700f19a5ef287f57f96ff8854a09cecdc93d23fb9fe2ba4f04dbecdd032a3e8f8e20a7102a2ff76d810fc4ec2a7d46bf026c7a29f29ac12869d6b5c145b2822
 MISC metadata.xml 427 SHA256 d8fc8fedafc547578a85222cb60fb7eff3740c8ce101b22ba75aa3e5028135ce SHA512 2f8f64ded5050e87ce679d944dcf9c9a801ea03ee14471ab0702f10339f3f995701c313bfe10e7ab01f1bc784f04a5e6efbb29ea0b44513b9b3e384370956dc5 WHIRLPOOL 7a2add023434038b287c141213c2caf2adcc7ff5bcfb8025b2db0163bedd436fea64dd0e1a072f00232722738705fdc1f367e758d108373146d6fbea8803d5b2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTbIJUACgkQVWmRsqeSphMOzACfTPH306ZPehZLaydutvPC8DqJ
-C6sAn0rT/nmWyv++puRhUWprmTWnLPtA
-=Kj7o
+iQIcBAEBCAAGBQJU3dNNAAoJELp701BxlEWfMVkQAIOd9TsA1oloXmHZ31aurRLh
+qJpbLBb4fwMSdUzoRttIw+U2VxpCLSWLp/tP9Dj1TkgL8c9ya054UdXC+PsJeLi/
+0Ic91HqT9SGk7FvNhbSujiLZGJt/Z8gOW9ak5CjigCSdLo44uDG6JPCS9Epp+e97
+CwcN5RVLmVjs3JoZie5L9FXonSwCQWKcRGABKjRQDTbfPLJlejieBaxglGBeXgb7
+lPZMhItv7ITAiQnRMTPgvl+xx7wMkT7/9rdQUzAUZ8qKrlIgYl6cKe67Ii7ypGyU
+U909JqjKjjrmWjBiIHYPx20gEy8bE7lmwrS3oOYSUdBZTb1LT8xnVylNveJBKX80
+PC9B/qK+kQqf/J0WxgkJ0rL28ZN1GJU4gjNZJvyBa49LmcyByEmZmfU7OsxYXUmJ
+tTtj28aEFlrm/67SjCgwDTGQHHud6RYk+yIkHf5rtOifuTvnIJc7F7p4tVNH393b
+ybmY4v3WfFmVWacL1P4uo9nM8T9Fw6uj4WMp8P6Aooka3lbyLMRwu4s7EzUilJhz
+BjNQwuMvzy6BBqF7L8gaITvK1p+s8x8QAdqB/oMS67+hDpGNFceIXc61FGoZYW+k
+FTi9suffcQT1YzI5PJBbkSD/SUDKMIkd5Mjk2SYpo85CwJoBD+W5rTe3KoJpwV6s
+GSd8DvcO7IWvJBz2wU1n
+=FV2H
 -----END PGP SIGNATURE-----
