@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/epoch/epoch-1.2.1.ebuild,v 1.1 2015/01/13 09:30:36 alicef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/epoch/epoch-1.2.1.ebuild,v 1.2 2015/02/13 11:00:11 amynka Exp $
 
 EAPI="5"
 
@@ -15,7 +15,7 @@ SRC_URI="https://github.com/Subsentient/${PN}/archive/${MY_PV}.tar.gz -> ${P}.ta
 
 LICENSE="public-domain"
 SLOT="0"
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~arm ~x86"
 
 S="${WORKDIR}/${MY_P}"
 
