@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.465 2015/02/11 09:27:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.467 2015/02/13 10:34:52 ago Exp $
+
+  13 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.16.ebuild:
+  Stable for x86, wrt bug #539482
+
+  13 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.16.ebuild:
+  Stable for amd64, wrt bug #539482
 
   11 Feb 2015; Jeroen Roovers <jer@gentoo.org> dbus-1.8.16.ebuild:
   Stable for HPPA (bug #539482).
