@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/freetype
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.412 2015/01/08 00:15:32 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.414 2015/02/13 10:34:57 ago Exp $
+
+  13 Feb 2015; Agostino Sarubbo <ago@gentoo.org> freetype-2.5.4-r1.ebuild:
+  Stable for x86, wrt bug #539796
+
+  13 Feb 2015; Agostino Sarubbo <ago@gentoo.org> freetype-2.5.4-r1.ebuild:
+  Stable for amd64, wrt bug #539796
 
 *freetype-2.5.5 (08 Jan 2015)
 
